--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,13 +1,6 @@
-.headerContainer{
-  margin: 0 auto;
-  height: 10rem;
-}
-
-.headerContent{
-  max-width: 1120px;
-  height: 10rem;
-  margin: 0 auto;
-  padding: 0 2rem;
+.headerContent{    
+  width: 100%;
+  height: 10rem;  
   display: flex;
-  align-items: center;  
+  align-items: center;      
 }
