--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -7,3 +7,24 @@
   margin: 0 auto;
   max-width: 760px;  
 }
+
+.previewButton{  
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  a{      
+    width: 100%;
+    padding: 1rem;      
+    background: var(--heading);
+    color: var(--background);
+    border-radius: 4px;
+    text-align: center;
+    font-size: 1.1rem;
+    font-weight: bold;
+  }  
+  &:hover{
+    text-decoration: underline;    
+  }
+}
